--- a/assets/css/invest.css
+++ b/assets/css/invest.css
@@ -141,7 +141,7 @@ a, a:visited {
   line-height: 43px;
 }
 .sfera__wrapper {
-  margin: 0 200px;
+  margin: 100px 200px;
 }
 /* .sfera-2-body__link {
   padding: 0;
