--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -244,8 +244,13 @@ section.section-two {
 }
 .about-as-heading {
   text-align: center;
-  margin-top: 150px;
-  margin-bottom: 0;
+  margin-top: 130px;
+  
+  padding-bottom: 100px;
+  font-size: 48px;
+  line-height: 58px;
+  font-weight: 700;
+  color: white;
 }
 .about-as-heading-last {
   font-size: 48px;
