--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -61,7 +61,10 @@
     border-bottom:2px solid rgba(0,0,0,0);
     border-image:linear-gradient(141.95deg, #FF00F5 14.92%, #00F0FF 84.27%) 40
 }
-
+.nav_list-link:hover{
+    border-bottom:2px solid rgba(0,0,0,0);
+    border-image:linear-gradient(141.95deg, #FF00F5 14.92%, #00F0FF 84.27%) 40
+}
 
 
 .checkButton{
