new,header icon

--- a/assets/css/downloads.css
+++ b/assets/css/downloads.css
@@ -10,7 +10,7 @@
 
 .lead__wrapper {
   margin: 0 180px;
-  background: #28282C;
+  background: #2E2E31;
   padding-top: 100px;
 }
 .lead__title-color {
@@ -18,7 +18,7 @@
 }
 
 .lead {
-  background: #28282C;
+  background: #2E2E31;
   padding: 0 0 100px 0;
 }
 .lead__content {
