--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -8,7 +8,7 @@
 
 }
 .team {
-	background: linear-gradient(180deg, #28282C 0%, #000000 100%);
+  background: #2E2E31;
   padding-top: 170px;
   padding-bottom: 130px;
 } 
