--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -12,7 +12,7 @@
   justify-content: center;
   align-items: center;
   color: white;
-  background: linear-gradient(180deg, #28282C 0%, #000000 100%);
+  background:  #2E2E31;
 }
 .section-about__wrapper_lead--title {
   font-weight: 300;
