--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 .lead__wrapper {
   margin: 0 200px;
-  background: linear-gradient(180deg, #28282C 0%, #000000 100%);
+  background:  #28282C;
 }
 
 .lead {
-  background: linear-gradient(180deg, #28282C 0%, #000000 100%);
+  background:  #28282C;
 }
 
 .lead__content {
@@ -13,7 +13,7 @@
   justify-content: center;
   align-items: center;
   -moz-column-gap: 265px;
-       column-gap: 265px;
+  column-gap: 265px;
   padding: 80px 0;
 }
 
