--- a/assets/css/invest.css
+++ b/assets/css/invest.css
@@ -19,7 +19,7 @@ a, a:visited {
 
 .investment {
   display: flex;
-  background-color: #000;
+  background: #2E2E31;
   margin: 0px 0px 0px 0px;
   position: relative;
 }
