--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -1,6 +1,6 @@
 .section__landing {
-  background: linear-gradient(180deg, #2E2E31 0%, #18181A 100%);
-  padding:100px  0 ;
+  background: #2E2E31;
+  padding:100px  0;
   display: grid;
   grid-template-columns: 50% 50%;
 }
