--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,7 +1,3 @@
-*{
-    margin: 0;
-    padding: 0;
-}
 
 .nav_menu{
     display: flex;
@@ -12,6 +8,7 @@
     height: 80px;
     width: 100%;
     margin: 0 auto;
+    padding: 40px 0;
 }
 .button_theme_image {
     margin: 0 auto;
@@ -152,7 +149,7 @@
         margin-left: 10px;
     }
     .nav_menu{
-        column-gap: 220px;
+        column-gap: 100px;
     }
     .nav_list-item{
         margin: 20px 0;
