--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -2,7 +2,8 @@
   background: #2E2E31;
   padding:100px  0;
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 45% 45%;
+  justify-content: center;
 }
 .lead__download-links-list {
   display: flex;
