--- a/assets/css/invest.css
+++ b/assets/css/invest.css
@@ -32,18 +32,25 @@ a, a:visited {
   margin-top: 200px;
 }
 .investment-body {
-  padding-top: 150px;
+  padding-top: 100px;
   padding-left: 200px;
 }
 .investment-body__title {
   padding-right: 80px;
-  font-size: 72px;
-  line-height: 87px;
+  font-size: 86px;
+  line-height: 104px;
+  font-weight: 700;
   color: #fff;
   margin-bottom: 50px;
 }
 .investment-body__title_color {
- color: #007094;
+  color: #00A9DE;
+}
+.card-body__list__color{
+  font-size: 36px;
+  line-height: 43px;
+  font-weight: 600;
+  color: #007094;
 }
 .investment-body__text {
   max-width: 667px;
@@ -62,7 +69,7 @@ a, a:visited {
 }
 
 .card__wrapper {
-  margin: 300px 200px;
+  margin: 300px 200px 0 200px;
 }
 .card-body__link {
   padding: 0;
@@ -83,7 +90,7 @@ margin: 46px 0px 0px 0px;
 }
 
 .sfera__wrapper {
-  margin: 0 200px;
+  margin: 200px 200px 100px 200px;
   list-style: circle;
 }
 .sfera-body__uptext {
@@ -113,8 +120,7 @@ margin: 46px 0px 0px 0px;
 
 
 .venchur__wrapper {
-  margin: 130px 200px;
-
+  margin: 0 200px;
 }
 .venchur-body__title {
   font-weight: 700;
@@ -141,34 +147,23 @@ margin: 46px 0px 0px 0px;
 
 .sfera-2 {
   display: flex;
+  margin: 0 200px;
 }
-.sfera-2__column {
-  flex: 0 0 60%;
-  margin: 160px 0px 100px 258px;
+.sfera-2-body__link {
+  padding: 55px 0 55px 30px;
 }
 .sfera-2__image {
   margin-right: 200px;
   margin-left: 245px;
   margin-top: 68px;
 }
-
-
 .sfera-2-body__uptext {
   font-size: 32px;
   font-weight: 700;
   line-height: 38px;
-  margin-bottom: 55px;
 }
-
-.sfera__wrapper {
-  margin: 100px 200px;
-}
-/* .sfera-2-body__link {
-  padding: 0;
-} */
-
 .sfera-2-body-content {
-  padding-right: 245px;
+  margin-bottom: 100px;
 }
 
 .goal {
