--- a/assets/css/downloads.css
+++ b/assets/css/downloads.css
@@ -38,7 +38,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  color:white;
+  color: rgba(255, 255, 255, 0.87);
 }
 .lead__title {
   font-weight: 700;
