--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -19,9 +19,8 @@
     justify-content: center;
     align-items: center;
     column-gap: 20px;
-    margin-left: 230px;
+    margin-left: 200px;
 }
-
 .logo{
     width: 247px;
     height: 40px;
@@ -44,11 +43,11 @@
     list-style: none;
     text-decoration: none;
     margin: 0 auto;
+    color: rgba(255, 255, 255, 0.87);
 
 }
-
 .nav_list-link{
-    color: white;
+    color: rgba(255, 255, 255, 0.87);
     text-decoration: none;
     font-size: 20px;
     padding: 7px 13px;
@@ -64,32 +63,28 @@
 }
 
 
-.checkButton{
+.checkButton {
     font-size: 30px;
-    color: white;
+    color: rgba(255, 255, 255, 0.87);
     float: right;
     line-height: 80px;
     margin-right: 40px;
     cursor: pointer;
     display: none;
 }
-
 .myCheckBox{
     display: none;
 }
-
 
 @media screen and (max-width:1440px) {
     label.logo{
         font-size: 30px;
         padding-left: 50px;
     }
-
     .nav_list-link{
         font-size: 18px;
     }
 }
-
 @media screen and (max-width:768px) {
     .checkButton{
         display: block;
@@ -120,30 +115,24 @@
         text-align: center;
         transition: all .5s;
         z-index: 99999;
-
     }
-
     .nav_list-item{
         height: 50px;
         display: block;
         margin: 30px 0;
         line-height: 30px;
     }
-
     .nav_list-link{
         font-size: 20px;
         color: white;
     }
-
     .nav_list-link:hover,.nav_list-link.active{
         color: white;
     }
-
     .myCheckBox:checked ~ .nav_list{
         left: 0;
     }
 }
-
 @media screen and (min-width:375px){
     .checkButton{
         margin-left: 10px;
