--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 .lead__wrapper {
   margin: 0 200px;
   background:  #28282C;
@@ -7,7 +6,6 @@
 .lead {
   background:  #28282C;
 }
-
 .lead__content {
   display: flex;
   justify-content: center;
@@ -16,7 +14,6 @@
   column-gap: 265px;
   padding: 80px 0;
 }
-
 .lead__content {
   display: flex;
   justify-content: center;
@@ -27,15 +24,13 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  color: white;
+  color: rgba(255, 255, 255, 0.87);
 }
-
 .lead__download-links-list {
   display: flex;
   list-style: none;
   padding: 0;
 }
-
 .lead__button {
   padding: 20px 32px;
   border-radius: 20px;
@@ -47,7 +42,6 @@
   font-weight: 300;
   margin: 0 0 20px 0;
 }
-
 .lead__subtitle {
   font-size: 36px;
   line-height: 43px;
@@ -61,25 +55,23 @@
   font-weight: 600;
   margin: 0 0 40px 0;
 }
-
 .lead__button:first-child {
   margin-right: 40px;
 }
-
 @media screen and (max-width: 1440px) {
   .lead__wrapper {
     margin: 0 110px;
   }
   .lead__content {
     -moz-column-gap: 25px;
-         column-gap: 25px;
+    column-gap: 25px;
   }
   .lead__subtitle {
     margin-bottom: 90px;
   }
   .lead__image-main {
     -o-object-fit: contain;
-       object-fit: contain;
+    object-fit: contain;
     width: 470px;
   }
 }
@@ -89,7 +81,7 @@
   }
   .lead__image-main {
     -o-object-fit: contain;
-       object-fit: contain;
+    object-fit: contain;
     width: 400px;
   }
   .lead__title {
@@ -123,7 +115,7 @@
   }
   .lead__content {
     -moz-column-gap: 20px;
-         column-gap: 20px;
+    column-gap: 20px;
     padding: 20px 0;
   }
   .lead__subtitle {
