--- a/assets/css/invest.css
+++ b/assets/css/invest.css
@@ -2,21 +2,17 @@
 ul li {
   list-style: none;
 }
-
 a, a:visited {
   text-decoration: none;
 }
-
 .ibg {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
-
 #more {
   display: none;
 }
-
 .investment {
   display: flex;
   background: #2E2E31;
@@ -40,7 +36,7 @@ a, a:visited {
   font-size: 86px;
   line-height: 104px;
   font-weight: 700;
-  color: #fff;
+  color: rgba(255, 255, 255, 0.87);
   margin-bottom: 50px;
 }
 .investment-body__title_color {
@@ -55,19 +51,16 @@ a, a:visited {
 .investment-body__text {
   max-width: 667px;
   font-size: 24px;
-  color: #fff;
+  color: rgba(255, 255, 255, 0.87);
   margin-bottom: 50px;
 }
-
 .investment-body-content {
   max-width: 950px;
 }
-
 .card {
   display: flex;
   column-gap: 50px;
 }
-
 .card__wrapper {
   margin: 300px 200px 0 200px;
 }
@@ -80,15 +73,13 @@ a, a:visited {
 }
 .sfera__column {
   flex: 0 0 60%;
-margin: 46px 0px 0px 0px;
-
+  margin: 46px 0px 0px 0px;
 }
 .sfera__image {
   margin-right: 246px;
   margin-left: 200px;
   margin-top: 57px;
 }
-
 .sfera__wrapper {
   margin: 200px 200px 100px 200px;
   list-style: circle;
@@ -117,8 +108,6 @@ margin: 46px 0px 0px 0px;
   font-weight: 400;
   padding-right: 110px;
 }
-
-
 .venchur__wrapper {
   margin: 0 200px;
 }
@@ -138,13 +127,11 @@ margin: 46px 0px 0px 0px;
 .venchur-body__link {
   padding-left: 0;
 }
-
 .venchur-body-list {
   font-size: 24px;
   line-height: 29px;
   margin-bottom: 40px;
 }
-
 .sfera-2 {
   display: flex;
   margin: 0 200px;
@@ -165,11 +152,9 @@ margin: 46px 0px 0px 0px;
 .sfera-2-body-content {
   margin-bottom: 100px;
 }
-
 .goal {
   background: #fff;
 }
-
 .goal-body__title {
   color: #000;
   font-size: 36px;
@@ -177,11 +162,9 @@ margin: 46px 0px 0px 0px;
   line-height: 43px;
   text-align: center;
 }
-
 .goal-body-content {
   margin: 130px 0px 130px 0px;
 }
-
 .lead__download-links-list {
   display: flex;
   list-style: none;
