--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -13,14 +13,14 @@
 }
 
 strong {
-  color:white;
+  color: rgba(255, 255, 255, 0.87);
 }
 .section-first {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: rgba(255, 255, 255, 0.87);
   line-height: 45px;
 }
 .section-first-color-sfera {
@@ -107,7 +107,7 @@ strong {
 }
 a {
   text-decoration: none;
-  color: #e6e6e6;
+  color: rgba(255, 255, 255, 0.87);
 }
 .lightning{
 	max-height: 150px;
@@ -151,7 +151,7 @@ section.section-two {
   height: 60px;
   text-align: center;
   Line-height: 58px;
-  color: #e6e6e6;
+  color: rgba(255, 255, 255, 0.87);
 }
 .section-two-content-number-two {
   display: none;
@@ -195,7 +195,6 @@ section.section-two {
   font-weight: 700;
   font-size: 48px;
   line-height: 58px;
-  
 }
 .section-as-video {
   text-align: center;
@@ -283,16 +282,12 @@ section.section-two {
   background-image: none;
   background: none;
 }
-/* .button-iOS {
-  background: #AD1AAF;
-} */
 .block-six-link {
   color: #00A9DE;
   margin: 5px;
   padding: 6px 20px 6px 20px;
   background: rgba(0, 169, 222, 0.1);
   border-radius: 4px;
-
 }
 .block-seven {
   display: grid;
@@ -305,7 +300,6 @@ section.section-two {
   display: flex;
 }
 .block-seven-paragraf {
-
   text-align: justify;
   Line-height: 35px;
   font-size: 24px;
@@ -340,91 +334,17 @@ section.section-two {
 .block-footer {
   display: flex;
   justify-content: space-around;
-  color: white;
+  color: rgba(255, 255, 255, 0.87);
   margin: 40px 0;
   font-size: 24px;
 }
 .block-footer-three {
-  color: #999CAC;
+  color: rgba(255, 255, 255, 0.87);
   text-align: center;
   font-size: 14px;
   margin: 100px;
 }
 @media screen and (max-width: 1440px) {
-  .star-one {
-    position: relative;
-    top: 0;
-    left: 1370px;
-    width: 25px;
-    height: 30px;
-    background-image: url(../image-lending/general/star\ 1440.png);
-    /*filter: blur(6px);*/
-  }
-  .header-fixed {
-    background-color: #0e042b;
-    width: 100%;
-    height: 80px;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: -30;
-    margin: 20px 10px 0px 10px;
-  }
-  .star-two {
-    display: none;
-  }
-  .star-three {
-    position: relative;
-    top: 1000px;
-    left: 30px;
-    width: 25px;
-    height: 30px;
-    background-image: url(../image-lending/general/star\ 1440.png);
-  }
-  .star-for {
-    position: relative;
-    top: 70px;
-    left: 1300px;
-    width: 30px;
-    height: 30px;
-    background-image: url(../image-lending/general/star\ 1440.png);
-  }
-  .star-five {
-    position: relative;
-    top: 20px;
-    left: 1400px;
-    width: 36px;
-    height: 52px;
-    background-image: url(../image-lending/general/star-variant-2.png);
-  }
-  .star-six {
-    display: none;
-  }
-  .star-seven {
-    display: none;
-  }
-  .star-eight {
-    display: none;
-  }
-  .star-nine {
-    display: none;
-  }
-  .star-ten {
-    position: relative;
-    top: 360px;
-    left: 175px;
-    width: 25px;
-    height: 30px;
-    background-image: url(../image-lending/general/star\ 1440.png);
-  }
-  .star-eleven {
-    position: relative;
-    top: 250px;
-    left: 1200px;
-    width: 25px;
-    height: 30px;
-    background-image: url(../image-lending/general/star\ 1440.png);
-  }
   .what-is-already-background {
     display: none;
   }
@@ -433,11 +353,6 @@ section.section-two {
   }
   .menu-btn{
     display: none;
-  }
-  .button-android,
-  .button-iOS {
-    width: 270px;
-    height: 60px;
   }
   .section-two-content {
     margin-left: 100px;
@@ -506,14 +421,6 @@ section.section-two {
   }
 }
 @media screen and (max-width: 768px) {
-  .star-one,
-  .star-three,
-  .star-for,
-  .star-five,
-  .star-ten,
-  .star-eleven  {
-    display: none;
-  }
   .section{
 	margin-top: -60px;
   }
