--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -109,7 +109,6 @@
     margin: 0px 1px 8px 1px;
   }
 }
-
 .item {
   height: 100%;
   display: block;
@@ -118,10 +117,10 @@
 .item__image img {
   width: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   border-radius: 8px;
   -o-object-position: center;
-     object-position: center;
+  object-position: center;
   box-shadow: 0px 10px 20px #000000;
 }
 .item__person {
@@ -135,7 +134,7 @@
   left: 18px;
 }
 .item__person .item__person-name {
-  color: #fff;
+  color: rgba(255, 255, 255, 0.87);
   font-size: 22px;
   font-weight: 600;
   line-height: 17px;
@@ -163,7 +162,7 @@
   font-size: 14px;
   font-weight: 600;
   line-height: 17px;
-  color: #C9CED4;
+  color: rgba(255, 255, 255, 0.87);
   width: 71%;
 }
 @media (max-width: 1240px) {
@@ -224,7 +223,7 @@
   font-weight: 700;
   letter-spacing: 2.8px;
   text-transform: uppercase;
-  color: #fff;
+  color: rgba(255, 255, 255, 0.87);
 }
 @media (max-width: 768px) {
   .item .logo__item .logo__text {
@@ -247,4 +246,4 @@
 .item:hover .logo__item {
   opacity: 1;
   visibility: visible;
-}/*# sourceMappingURL=styles.css.map */
+}
