--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -131,10 +131,25 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: 25%;
   justify-content: center;
-  top: 120px;
+  top: 245px;
   left: 18px;
+}
+@media (max-width: 1650px) {
+  .item__person {
+    top: 220px;
+  }
+}
+@media (max-width: 1650px) {
+  .item__person {
+    top: 150px;
+  }
+}
+@media (max-width: 320px) {
+  .item__person {
+    top: 130px;
+  }
 }
 .item__person .item__person-name {
   color: #fff;
@@ -214,7 +229,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgba(100, 194, 158, 0.5);
+  background-color: rgba(0, 169, 222, 0.5);
   border-radius: 8px;
   z-index: 2;
   opacity: 0;
