--- a/assets/css/landing.css
+++ b/assets/css/landing.css
@@ -119,12 +119,11 @@ a {
 .lightning:hover {
   background-image: url(../image-lending/1920/line.png);
 }
-section.section-two {
-	margin-top: -100px;
-}
+
 .section-two {
   display: grid;
   grid-template-columns: 50% 50%;
+  margin-top: 100px;
 }
 .section-two-image {
   padding: 30px 0;
@@ -249,8 +248,17 @@ section.section-two {
 }
 .about-as-heading {
   text-align: center;
-  margin-top: 130px;
-  
+  margin-top: 100px;
+  color: rgba(255, 255, 255, 0.87);
+  padding-bottom: 100px;
+  font-size: 48px;
+  line-height: 58px;
+  font-weight: 700;
+}
+.section-about-as-heading {
+  text-align: center;
+  margin-top: 160px;
+  color: black;
   padding-bottom: 100px;
   font-size: 48px;
   line-height: 58px;
@@ -294,7 +302,7 @@ section.section-two {
   grid-template-columns: 700px 700px;
   justify-content: center;
   align-items: center;
-  margin-top: -300px;
+  margin-top: 260px;
 }
 .block-seven-buttons {
   display: flex;
@@ -316,7 +324,7 @@ section.section-two {
   justify-content: center; 
 }
 .block-eight {
-	margin: 120px 120px;
+	margin: 320px 120px 120px 120px;
   text-align: center;
 }
 .block-eight-card {
