--- a/assets/css/team.css
+++ b/assets/css/team.css
@@ -1,19 +1,21 @@
-.lead__title {
-  display: flex;
-  justify-content: center;
-  font-weight: 700;
-  font-size: 48px;
-  line-height: 58px;
-  margin: 100px 0;
-}
 .team {
-  padding-bottom: 130px;
-} 
+  background: #fff;
+}
+.team__title {
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 58px;
+  text-align: center;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  text-transform: uppercase;
+}
 .team__body {
   display: flex;
   margin-left: 212px;
   margin-right: 212px;
   flex-wrap: wrap;
+  margin-bottom: 100px;
 }
 @media (max-width: 1850px) {
   .team__body {
@@ -109,6 +111,7 @@
     margin: 0px 1px 8px 1px;
   }
 }
+
 .item {
   height: 100%;
   display: block;
@@ -117,10 +120,10 @@
 .item__image img {
   width: 100%;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   border-radius: 8px;
   -o-object-position: center;
-  object-position: center;
+     object-position: center;
   box-shadow: 0px 10px 20px #000000;
 }
 .item__person {
@@ -128,13 +131,28 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  height: 25%;
   justify-content: center;
-  top: 120px;
+  top: 245px;
   left: 18px;
 }
+@media (max-width: 1650px) {
+  .item__person {
+    top: 220px;
+  }
+}
+@media (max-width: 1650px) {
+  .item__person {
+    top: 150px;
+  }
+}
+@media (max-width: 320px) {
+  .item__person {
+    top: 130px;
+  }
+}
 .item__person .item__person-name {
-  color: rgba(255, 255, 255, 0.87);
+  color: #fff;
   font-size: 22px;
   font-weight: 600;
   line-height: 17px;
@@ -162,7 +180,7 @@
   font-size: 14px;
   font-weight: 600;
   line-height: 17px;
-  color: rgba(255, 255, 255, 0.87);
+  color: #C9CED4;
   width: 71%;
 }
 @media (max-width: 1240px) {
@@ -211,7 +229,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgba(100, 194, 158, 0.5);
+  background-color: rgba(0, 169, 222, 0.5);
   border-radius: 8px;
   z-index: 2;
   opacity: 0;
@@ -223,7 +241,7 @@
   font-weight: 700;
   letter-spacing: 2.8px;
   text-transform: uppercase;
-  color: rgba(255, 255, 255, 0.87);
+  color: #fff;
 }
 @media (max-width: 768px) {
   .item .logo__item .logo__text {
