--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,3 +1,50 @@
+.video-container{
+    width: 100%;
+    height: 100%;
+    top: 100px;
+    left: 0;
+    position: absolute;
+    z-index: 11;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s;
+}
+.video-container .close{
+    position: absolute;
+    top: 4%;
+    right: 120px;
+    font-size: 20px;
+    cursor: pointer;
+    z-index: 1;
+    color: white;
+}
+.video-player{
+    cursor: pointer;
+}
+.video-container video{
+    width: 90%;
+    height: 67%;
+    transform: scale(0);
+    box-shadow: 0 20px 20px rgba(0, 0, 0, 0.2);
+    outline: none;
+    transition: all 0.3s;
+    margin-left: 100px;
+    margin-top: 15px;
+    z-index: 11;
+}
+.video-container.show{
+    pointer-events: all;
+    opacity: 1;
+    z-index: 11;
+}
+.video-container.show video{
+transform: scale(1);
+background: #1f1f26;
+}
+
+
 
 .nav_menu{
     display: flex;
